# hch-cgpt

./: Cargo.toml  README.md
src/: main.rs  openai.rs
src/snapshots/: hch_cgpt__openai__tests__chat_log.snap
