[package]
name = "hch-cgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.93"
